# jobdog

./: .gitignore  README.md  pyproject.toml
scripts/: download_listing_response.py
src/jobdog/: exceptions.py  http_client.py  jobdog.py  logger.py
src/jobdog/models/: job_listing.py
src/jobdog/providers/: base.py  greenhouse.py  jobindex.py  linkedin.py  utils.py
tests/: conftest.py  test_jobdog.py
tests/providers/: greenhouse_test.py  jobindex_test.py  test_linkedin.py  test_utils.py  utils_test.py
tests/providers/cassettes/greenhouse_test/: test_greenhouse_integration[job_4182383008-expected_data0].yaml  test_greenhouse_integration[job_4315289005-expected_data1].yaml  test_greenhouse_parse_html[job_4182383008-expected_data0].yaml  test_greenhouse_parse_html[job_4315289005-expected_data1].yaml
tests/providers/cassettes/jobindex_test/: test_jobindex_integration[job_h1509671-expected_data1].yaml  test_jobindex_integration[job_r12800344-expected_data0].yaml  test_jobindex_parse_html[job_h1509671-expected_data1].yaml  test_jobindex_parse_html[job_r12800344-expected_data0].yaml
tests/providers/cassettes/linkedin_test/: test_linkedin_parse_html[job_-expected_data0].yaml  test_linkedin_parse_html[job_-expected_data1].yaml
tests/providers/cassettes/test_linkedin/: test_linkedin_parse_html[job_-expected_data0].yaml  test_linkedin_parse_html[job_-expected_data1].yaml  test_linkedin_parse_html[job_machine-learning-engineer-applied-ai-at-openai-3915648739-job_].yaml  test_linkedin_parse_html[job_search-job_0].yaml  test_linkedin_parse_html[job_search-job_1].yaml  (+1 more)
